--- a/RSS-CSS-Selectors/package.json
+++ b/RSS-CSS-Selectors/package.json
@@ -7,12 +7,14 @@
     "build": "webpack",
     "dev": "webpack serve --env develop",
     "lint": "eslint src",
-    "deploy": "gh-pages -d dist -e rss-css-selectors"
+    "deploy": "gh-pages -d dist -e rss-css-selectors",
+    "test": "npx jest"
   },
   "keywords": [],
   "author": "Illia Sakharau",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -25,10 +27,13 @@
     "eslint-webpack-plugin": "^4.0.1",
     "gh-pages": "^3.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
