--- a/async-race/package.json
+++ b/async-race/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "rss-css-selectors",
+  "name": "async-race",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve --env develop",
-    "deploy": "gh-pages -d dist -e rss-css-selectors"
+    "deploy": "gh-pages -d dist -e async-race"
   },
   "keywords": [],
   "author": "Illia Sakharau",
@@ -17,10 +17,11 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.43.0",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-webpack-plugin": "^4.0.1",
     "gh-pages": "^3.0.0",
@@ -34,8 +35,5 @@
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
